<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tile_color"
    tools:context=".bmiScreen.BmiCalculatorFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:fontFamily="@font/poppins_fam"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/white"/>


    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_92sdp"
        android:hint="@string/enter_weight_in_kgs"
        android:inputType="numberDecimal"
        android:autofillHints="Measurements"
        android:textColorHint="@color/text_color"
        />

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_192sdp"
        android:hint="@string/enter_height_in_cm"
        android:autofillHints="Measurements"
        android:inputType="numberDecimal"
        android:textColorHint="@color/text_color"
        android:textColor="@color/text_color"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculate_button"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_300sdp"
        android:text="@string/calculate"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/poppins_fam"
        android:textColor="@color/white"
        android:backgroundTint="@color/fill_color"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_400sdp"
        android:fontFamily="@font/poppins_fam"
        android:text="@string/result_here"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />


</FrameLayout>