<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginScreen.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_img"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="69dp"
            android:layout_height="57dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/materialDivider2"
            app:layout_constraintEnd_toEndOf="@id/textView"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialDivider"
            app:layout_constraintVertical_bias="0.4" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_90sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/lato_fam"
            android:text="@string/fit_fusion"
            android:textAlignment="center"
            android:textSize="@dimen/_23ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginHorizontal="@dimen/_18sdp"
            app:cardElevation="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.539">

            <TextView
                android:id="@+id/below_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_fam"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_29sdp"
                android:layout_marginTop="@dimen/_55sdp"
                android:autofillHints="emailAddress"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_8sdp" />

            <EditText
                android:id="@+id/pass_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_29sdp"
                android:layout_marginTop="@dimen/_110sdp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_password"
                android:drawableEnd="@drawable/ic_visibility"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:paddingHorizontal="@dimen/_8sdp" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up_button"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_175sdp"
                android:backgroundTint="@color/blue"
                android:text="@string/sign_up"

                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_175sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:backgroundTint="@color/green"
                android:text="@string/login"

                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_68sdp"
                android:text="@string/or"
                android:textAlignment="center" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>