<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeScreen.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_25sdp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="@dimen/_25sdp" />


        <ImageView
            android:id="@+id/calendar_icon"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/_39sdp"

            android:src="@drawable/calendar_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_38sdp"
            android:layout_marginEnd="@dimen/_138sdp"
            android:fontFamily="@font/poppins_fam"
            android:text="@string/saturday"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/calendar_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_57sdp"
            android:fontFamily="@font/poppins_fam"
            android:text="@string/_29_september"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/calendar_icon"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_110sdp"
            android:fontFamily="@font/poppins_fam"
            android:text="@string/activities"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constrainedHeight="true"
            android:layout_marginHorizontal="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/sub_title"
          tools:listitem="@layout/items_recycler"
            app:spanCount="2"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>